Fixed card spacing

--- a/style.css
+++ b/style.css
@@ -5,13 +5,15 @@ body {
     padding: 0;
 }
 .card{
-    width: 25vw;
-    height: 35vh;
+    width: 35vw;
+    height: 65vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     background-color: rgb(162, 212, 255); 
+    margin-bottom: 100px;
+    margin-top: 40px;
 }
 .card-img {
     width: 100%;
